--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="bull-market.png" type="image/png">
+    <link rel="apple-touch-icon" href="bull-market.png" type="image/png">
+    <!-- <img width="100" height="100" src="https://img.icons8.com/plasticine/100/apple-calculator.png" alt="apple-calculator"/> -->
     <title>Trade Calc</title>
     <!-- Link to Google Fonts for Mukta -->
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;600&display=swap" rel="stylesheet">
